--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="referrer" content="no-referrer" />
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>
-    <%= htmlWebpackPlugin.options.title %>
+    职教小助手
   </title>
 </head>
 
